Update index.html - live update switch

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
     <button class="collapsible">Live Data</button>
     <div class="content"> <!--Live Data-->
         <div class="content-inner">
+            <label class="switch">
+                <input type="checkbox" id="liveToggle">
+                <span class="slider round"></span>
+            </label>
             <pre id="liveDataOut" class="data-container">Waiting for data...</pre>
         </div>
     </div>
